--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <script>
         const apiKey = "ae9641603e54f22742f7ff1bbe58a705";
-        const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=standard*&q=";
+        const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric*&q=";
 
         const searchBox = document.querySelector(".search input");
         const searchBtn = document.querySelector(".search button");
@@ -52,7 +52,7 @@
         async function checkWeather(city) {
             const response = await fetch(apiUrl + city + `&appid=${apiKey}`);
 
-            if (response.ststus == 404) {
+            if (response.status == 404) {
                 document.querySelector(".error").style.display = "block";
                 document.querySelector(".weather").style.display = "none";
             }
