--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
 
     <script>
         const apiKey = "ae9641603e54f22742f7ff1bbe58a705";
-        const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric*&q=";
+        const apiUrl = "https://api.openweathermap.org/data/2.5/weather?&q=";
 
         const searchBox = document.querySelector(".search input");
         const searchBtn = document.querySelector(".search button");
         const weatherIcon = document.querySelector(".weather-icon");
 
         async function checkWeather(city) {
-            const response = await fetch(apiUrl + city + `&appid=${apiKey}`);
+            const response = await fetch(apiUrl + city + `&appid=${apiKey}&units=metric`);
 
             if (response.status == 404) {
                 document.querySelector(".error").style.display = "block";
